Adding Loyality programs and discounts